--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h3{
 
 form{
     height:200px;
-    background-color: lightgrey;
+    background-color: rgb(238, 238, 238);
     margin:10px;
     padding:10px;
     display: grid;
@@ -292,22 +292,60 @@ footer a i{
         justify-content: space-between;
     }
 
-    h1{
-        margin-top: 0;
+    #photo{
+        height:300px;
+        padding: 40px;
     }
 
-    ul{
+    #photoprofil{
+        display:block;
+        margin:auto;
+        width:300px;
+    }
+
+    h1{
+        margin-top: 0;
+        font-size: 1em;
+        width: 300px;
+        line-height: 50px;
+        
+    }
+
+    li{
+        font-size: 1em;
     }
     nav{
+        margin: 0;
         width:600px;
     }
 
     section{
         border-radius:5px;
         border: black 1px solid;
-        width:300px;
-        height:300px;
-        margin:50px;
+        width:400px;
+        height:400px;
+        margin:0px;
+    }
+    h2{
+        text-align: left;
+        padding-left: 100px;
+        margin: 50px 0 20px 0;
+        
+    }
+    .projets{
+        padding: 20px 50px;
+        display: flex;
+        justify-content: space-between;
+    }
+    form{
+        margin: 20px 70px;
+        height:400px;
+        margin-bottom: 50px;
+    }
+
+    footer{
+        height:200px;
+        padding-bottom: 50px;
     }
 
 }
