--- a/style.css
+++ b/style.css
@@ -78,7 +78,6 @@ h2{
 }
 
 .projets{
-    height: 500px;
     display:flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -88,8 +87,8 @@ h2{
 section{
     border-radius:5px;
     border: rgb(240, 240, 240) 2px solid;
-    width:35%;
-    height: 25%;
+    width:300px;
+    height: 300px;
     margin:20px;
     position: relative;
 }
@@ -219,6 +218,101 @@ footer a i{
     color: aliceblue;
 }
 
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+    background-color: transparent;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+    position: relative;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+    color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+    background-color: #316694;
+    color: white;
+    padding:20px;
+    height:260px;
+    border-radius:5px;
+    transform: rotateY(180deg);
+}
+
+h4{
+margin: 20px 0;
+}
+
+
+/* The Modal (background) */
+#modal-content {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%; /* Full width */
+    height: 80%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #316694;
+    margin: auto;
+    border-radius: 30px;
+    padding: 20px;
+    border: 1px solid #888;
+  }
+  
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: rgb(150, 7, 7);
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+#modal-content p {
+    color: #8BC34A;
+}
+
+#modal-content button {
+       display: none;
+    }
+    
+#modal-img {
+    height:500px;
+ }
 @media screen and (min-width: 768px) {
     body{
         font-size: larger;
@@ -247,8 +341,8 @@ footer a i{
     section{
         border-radius:5px;
         margin:20px;
-        width:35%;
-        height: 25%;
+        width:300px;
+        height: 300px;
     }
     
     form{
@@ -266,17 +360,22 @@ footer a i{
     }
     
     .projets{
-        height: 850px;
         display:flex;
         flex-wrap: wrap;
-        justify-content: center;
-        align-content: space-between;
+        justify-content: space-around;
+        align-content: space-around;
     }
     h1{
         margin-top: 10px;
     }
     nav{
         margin-top: 10px;
+    }
+
+    
+    h4{
+
+    margin: 10px 0;
     }
 }
 
@@ -320,7 +419,7 @@ footer a i{
     section{
         width:400px;
         height:400px;
-        margin:0px;
+        margin:20px 0px;
     }
     h2{
         text-align: left;
@@ -331,7 +430,7 @@ footer a i{
     .projets{
         padding: 20px 50px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-evenly;
     }
     form{
         margin: 20px 70px;
@@ -348,6 +447,57 @@ footer a i{
     footer{
         height:200px;
         padding-bottom: 50px;
+    }
+
+
+    
+
+    /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+    .flip-card {
+        background-color: transparent;
+        border: 1px solid #f1f1f1;
+        perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    }
+    
+    /* This container is needed to position the front and back side */
+    .flip-card-inner {
+        position: relative;
+        text-align: center;
+        transition: transform 0.8s;
+        transform-style: preserve-3d;
+    }
+    
+    /* Do an horizontal flip when you move the mouse over the flip box container */
+    .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+    }
+    
+    /* Position the front and back side */
+    .flip-card-front, .flip-card-back {
+        position: absolute;
+        -webkit-backface-visibility: hidden; /* Safari */
+        backface-visibility: hidden;
+    }
+    
+    /* Style the front side (fallback if image is missing) */
+    .flip-card-front {
+        color: black;
+    }
+    
+    /* Style the back side */
+    .flip-card-back {
+        background-color: #316694;
+        color: white;
+        padding:20px;
+        height:360px;
+        width:360px;
+        border-radius:5px;
+        transform: rotateY(180deg);
+    }
+    
+    h4{
+
+    margin: 20px 0;
     }
 
 }
