--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ section{
 }
 
 section img{
-    height: 100%;
+    height: 300px;
     width: 100%;
     border-radius:5px;
     object-fit: cover;
@@ -257,6 +257,7 @@ footer a i{
     color: white;
     padding:20px;
     height:260px;
+    width:260px;
     border-radius:5px;
     transform: rotateY(180deg);
 }
@@ -267,7 +268,7 @@ margin: 20px 0;
 
 
 /* The Modal (background) */
-#modal-content {
+#modal{
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -279,20 +280,25 @@ margin: 20px 0;
     width: 80%; /* Full width */
     height: 80%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: #316694;
+    background-color: #ffffff;
     margin: auto;
-    border-radius: 30px;
+    box-shadow: 0px 0px 500px 50px rgba(0,0,0,0.4) ;
+    border-radius: 10px;
     padding: 20px;
     border: 1px solid #888;
+    display:flex;
+    flex-wrap: wrap;
   }
   
+
+
   
   /* The Close Button */
   .close {
-    color: #aaaaaa;
-    float: right;
+    color: black;
     font-size: 28px;
     font-weight: bold;
+    float:right;
   }
   
   .close:hover,
@@ -303,7 +309,7 @@ margin: 20px 0;
   }
 
 #modal-content p {
-    color: #8BC34A;
+    color: #000000;
 }
 
 #modal-content button {
@@ -311,8 +317,25 @@ margin: 20px 0;
     }
     
 #modal-img {
-    height:500px;
+    height:210px;
  }
+
+ #modal-img img{
+     
+    width:100%;
+    height:180px;
+    object-fit: cover;
+
+ }
+
+.myBtn{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background-color: none;
+    border: none;
+}
+
 @media screen and (min-width: 768px) {
     body{
         font-size: larger;
@@ -377,6 +400,17 @@ margin: 20px 0;
 
     margin: 10px 0;
     }
+    #modal-img {
+        height:400px;
+     }
+    
+     #modal-img img{
+         
+        width:100%;
+        height:350px;
+        object-fit: cover;
+    
+     }
 }
 
 
@@ -420,6 +454,11 @@ margin: 20px 0;
         width:400px;
         height:400px;
         margin:20px 0px;
+    }
+
+    section img{
+        width:400px;
+        height:400px;
     }
     h2{
         text-align: left;
@@ -500,4 +539,15 @@ margin: 20px 0;
     margin: 20px 0;
     }
 
+    #modal-img {
+        height:500px;
+     }
+    
+     #modal-img img{
+         
+        width:100%;
+        height:470px;
+        object-fit: cover;
+    
+     }
 }
